--- a/requirements.txt
+++ b/requirements.txt
@@ -3,29 +3,43 @@ APScheduler==3.6.3
 attrs==21.4.0
 cachetools==4.2.2
 certifi==2021.10.8
+cftime==1.6.0
 charset-normalizer==2.0.12
 click==8.1.2
 click-plugins==1.1.1
 cligj==0.7.2
 cloudpickle==2.0.0
 colorama==0.4.4
+cycler==0.11.0
 dask==2022.4.1
 Fiona==1.8.21
 Flask==2.1.1
+fonttools==4.33.2
 fsspec==2022.3.0
+GDAL==3.4.2
+GeoAlchemy2==0.11.1
 geopandas==0.10.2
+geoserver-rest==2.2.2
 greenlet==1.1.2
+h5netcdf==1.0.0
+h5py==3.6.0
 idna==3.3
 importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
+kiwisolver==1.4.2
 locket==1.0.0
 MarkupSafe==2.1.1
+matplotlib==3.5.1
 munch==2.5.0
+netCDF4==1.5.8
 numpy==1.22.3
 packaging==21.3
 pandas==1.4.2
 partd==1.2.0
+Pillow==9.1.0
+psycopg2==2.9.3
+Pygments==2.12.0
 pyparsing==3.0.8
 pyproj==3.3.1
 python-dateutil==2.8.2
@@ -34,6 +48,9 @@ pytz==2022.1
 pytz-deprecation-shim==0.1.0.post0
 PyYAML==6.0
 requests==2.27.1
+Rtree==1.0.0
+scipy==1.8.0
+seaborn==0.11.2
 Shapely==1.8.1.post1
 six==1.16.0
 SQLAlchemy==1.4.35
@@ -45,4 +62,5 @@ tzlocal==4.2
 urllib3==1.26.9
 Werkzeug==2.1.1
 xarray==2022.3.0
+xmltodict==0.12.0
 zipp==3.8.0
